@@ -7,11 +7,13 @@ DIST SABnzbd-0.7.17-src.tar.gz 2310300 SHA256 a501517dbaf161deab2153118ff3b44512
 DIST SABnzbd-0.7.18-src.tar.gz 2317137 SHA256 aa05697d901b3e334e92f274b2e8788973059840be656a1545e8f2a4b070b014 SHA512 db7606be913fc89cdea0c037594b614c16f3887b32d1133c5f7a6c92f3dac5bec2250972e35941cd462e65bb29e91db2a43ff1e6624d827223afb957ec7922fe WHIRLPOOL 313e74425555af3dc86e111440974fefef42531018faad14a2a39649cef21a2b2d1d5a917c4ec13089ef9a46a2c31fe56b544ae0fa72628497782be756e8014f
 DIST SABnzbd-0.7.19-src.tar.gz 2386744 SHA256 31ad0ae24db3873011db816e1b100f4429734b2260f4c669b7261d2f85717487 SHA512 383788d87a3ee4e69ba818f6614f6929aa328d1153b746e04736868de598ee35e556a07cced7c74bc89c54fe77c1e52c4cdde8ed37d536a09bd1c605c551b9e7 WHIRLPOOL fbf1ab129a403011bd6957272d348fd745621e9c13f46f3988362bb8bb7a6ceb26b57253978ec5f5ae97c2ea942ba80ff1cab0ca1d1f99d33a1c55fc03b0dad9
 DIST SABnzbd-0.7.20-src.tar.gz 2389762 SHA256 20b3a4613a0ecdede4fdfeb628ae806e458ac1a6fb684306328dd4ed1faf8742 SHA512 51ea888fcb7b49156cb719cb4fe75725d69acd726097d8b2526d6af87d0404bf08d0ab4b82f25dae7ac9a52d6c639e57a145bf5af6005fa435ad31f239a716d5 WHIRLPOOL 2686160be649c051ac1186481dae1e876650fbc91fe3ea1ab2d1569baea51f0ab7d0be6c7942b9facd6e5f856ab24ab36d1dc2f55dc645f06be275b2e43abb4b
+DIST SABnzbd-1.0.0-src.tar.gz 2973807 SHA256 7573dfafd6f3b51e899f47436de0e0b3d8e83a568e2a6f0f3da0aaa1f3d4cfaa SHA512 95d72879e2145532c0f7debda1b1107b14635a58c20565aab220981b4c6dd345869388b94a906f3c48d41d3e078d935263bcd1620fa5166ea6f322137a08619b WHIRLPOOL 907038152dcac7aed4ccaa2f349ec77c6efc79b2fbc25cfc690d05107e4ebdf7033808151eb11563fbbef6c217cf4ee6b659b222a92b1447930e039aac3ba207
 EBUILD sabnzbd-0.7.16.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.17.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
 EBUILD sabnzbd-0.7.18.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
 EBUILD sabnzbd-0.7.19.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
 EBUILD sabnzbd-0.7.20-r1.ebuild 2071 SHA256 70bec5a63e0df2b1a97ecdb4b9212825608900bce50d69eb1491c12514bbf8fa SHA512 c4a6812619dbaecec24f4804eb3f246dc47f5465bf9f5eec827e4cd5e2e843492a34c64c4e39d95331e0f5479d8d7a52f343b34c88d1c23536b9ba2437a8bd0a WHIRLPOOL 42ff017ff203b0b0358431e376f1de2ea54d78d4f1927b490afbcd46744dc4064f56df0bbe4fc5003dd435fdb7f082bbf98d52190f2e38368cfa9246f1cc2c2c
 EBUILD sabnzbd-0.7.20.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
-MISC ChangeLog 4379 SHA256 4043276a5059654ed0aa1f11b5e3d5301cbea1d8d242cd2dee78196aee65ba69 SHA512 53c3fc87479a85d87436f84b2ba6c2fee85bd90efd1c633dfe2095a04065007779a644e4cfe430dbfd5269936474241c51c6f5cb397ce877531bfc3e3abcb604 WHIRLPOOL 79d30cc8aa6155e5e01a92c5a305d25e9e153972980eeb6a435b4360d9d8f002b1bc2c2437dce55c976b1cf1f0647d5d6f39d209bd23ef649ec7ab1cabec504b
+EBUILD sabnzbd-1.0.0.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164ee865c57d5805127896f67105 SHA512 19fa3dc848e7e874ab260951ece9e14c54641501192503364c4c16aa9c7ca96d1982e23b3a65dfc4a2d9585ae6115f84085bd68833351396f63366ff83418dc5 WHIRLPOOL b73fa6058d1fa76975855a86f9dc61e772f87506a8c96aedc903e0d9e8fbef7e3297d603abce7f5c829a0cb29bfc07d36d3180cf83a3c19dae4ae4c8e47801ba
+MISC ChangeLog 4519 SHA256 08589c7f5d9d72ff2627f54fe731f36506490b5f296f6b734e38d328799c9ba0 SHA512 2113b15a17bed95c2f44d657cc6dbbe51fe82c4c052834c21e90cc50849cd1ed0dfb59d4d42b1874704c3fbad93d1e868a5d3ca7c966919576ba3e609adf136e WHIRLPOOL df8e1fda1ee30792952243fb42cbbfcdae0924283a4fd65173a019d499f3a3c822918d52bcb25dd1f4c53af11a07dbbe0fc50597ce1678f99edb08fd4eaa11da
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
