@@ -1,6 +1,12 @@
 # ChangeLog for net-nntp/sabnzbd
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*sabnzbd-1.0.0 (20 Mar 2016)
+
+  20 Mar 2016; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  +sabnzbd-1.0.0.ebuild:
+  Version bump.
 
 *sabnzbd-0.7.20 (23 Nov 2014)
 
